# popl20

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-jobs.yml  macos.yml  ubuntu.yml  windows.yml
example/: CMakeLists.txt  popl_example.cpp
test/: CMakeLists.txt  test_main.cpp  value_test.cpp
